# Gameboy-Reverse-Engineering

./: .gitignore  CMakeLists.txt  LICENSE
HID/: CMakeLists.txt
HID/src/: main.c
desktop_client/: index.html  package.json  vite.config.ts
desktop_client/electron/: main.ts  preload.ts
desktop_client/src/: App.css  App.tsx
desktop_client/src/components/: Content.tsx  GBPrinter.tsx  Sidebar.tsx
famicomkeyboard/: CMakeLists.txt  famicomkeyboard.cpp
gball/: CMakeLists.txt  gball.cpp
gbinfrared/: CMakeLists.txt  gbinfrared.cpp
gbprinter/: CMakeLists.txt  gbprinter.cpp
gbserial/: CMakeLists.txt  gbserial.cpp
gbsniffer/: CMakeLists.txt  gbsniffer.cpp
gbtrader/: CMakeLists.txt  gbtrader.cpp  gen1.hpp
joybus/: CMakeLists.txt  joybus.cpp
libgb/: CharacterMap.hpp
libgb/pokemon/: CharacterMap.cpp  CharacterMap.hpp
snesHID/: CMakeLists.txt  Makefile
snesHID/src/: main.c
snescontroller/: CMakeLists.txt  snescontroller.cpp
